--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "keep-react": "^1.4.0",
     "next": "14.2.4",
     "nodemailer": "^6.9.14",
+    "phosphor-react": "^1.4.1",
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
